{
    "name": "InputActions",
    "maps": [
        {
            "name": "Lander",
            "id": "4ae4b253-44dc-44e3-a526-8f340e9db7c9",
            "actions": [
                {
                    "name": "LanderUp",
                    "type": "Button",
                    "id": "3cf4479d-ac3a-4e95-9d92-a99ea02b5dd4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LanderLeft",
                    "type": "Button",
                    "id": "296e1647-febb-4560-b64d-51c98a3cd40c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LanderRIght",
                    "type": "Button",
                    "id": "fec7f63d-e663-4d81-80f3-02972852e23a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "fff84b3c-eecc-48cd-8982-09bd52b94ab1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "1353a7d6-3619-485c-891a-ef37405cdc5c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2177873f-af93-477e-8f1e-bb034cd43c84",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6738211a-bfcc-4762-be7c-72eaf1e5aa52",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5f49644-efa2-4688-9dd1-2e8f09970344",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7db530a-7c29-4363-ba4c-8194646937df",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b424af5e-30bd-4a36-9100-cf5d334f8333",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c2b8a1b-75d1-4a10-80e3-d0647e01d623",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2700b96-08bc-4067-917c-c10fb329a222",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderRIght",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e469b208-4217-4a90-9967-9e28546f7efe",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderRIght",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f4a0033-7ec6-433d-8bc8-eddacd15a1d4",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderRIght",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02bd7575-9866-4a50-a15b-f07bb3bb1953",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4cc1e025-ba81-4d48-8c71-c10f986832c5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34ee7c8f-3bc4-4ed4-b535-1b0ed30414b2",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}